--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <link rel="stylesheet" href="header.css">
         <link rel="stylesheet" href="sidebars.css">
+        <link rel="stylesheet" href="main.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Mona+Sans:ital,wght@0,200..900;1,200..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
@@ -49,7 +50,8 @@
                 <div class="profile-container"></div>
             </div>
         </header>
-        <div class="repo-list">
+
+        <section class="repo-list">
             <div class="repo-header">
                 <p>Top repositories</p>
                 <button class="new-repo-button">New</button>
@@ -64,6 +66,21 @@
                     <div class="repo-icon"></div>
                     <div class="repo-name">repository-2</div>
             </div>
-        </div>
+        </section>
+
+        <main class="main-content">
+            <h2>Home</h2>
+            <div class="search-box-container">
+                <textarea class="search-box" type="text" placeholder="Ask anything"></textarea>
+                <div class="box-container2">
+                    <div class="plus-icon">+</div>
+                    <div class="search-suggest">Add repositories, files, and spaces</div>
+                </div>
+                
+            </div>
+           
+
+        </main>
+
     </body>
 </html>
