--- a/index.html
+++ b/index.html
@@ -76,7 +76,15 @@
                     <div class="plus-icon">+</div>
                     <div class="search-suggest">Add repositories, files, and spaces</div>
                 </div>
+                <div class="send-btn">Send</div>
                 
+            </div>
+            <div class="copilot-tasks">
+                <div class="task-item">Task</div>
+                <div class="task-item">Create issue</div>
+                <div class="task-item">Write code</div>
+                <div class="task-item">Git</div>
+                <div class="task-item">Pull requests</div>
             </div>
            
 
